Fix spacing

--- a/src/components/FlightSearch.css
+++ b/src/components/FlightSearch.css
@@ -29,6 +29,7 @@ form {
 
 label {
     font-size: 20px;
+    margin-right: 0.5em;
 }
 
 
